--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>BahasaKita</title>
-		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
-		<script src="bootstrap/js/bootstrap.min.js" rel="stylesheet"></script>
+		 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<style>
 			.navbar {
 				background-color:red;
@@ -22,19 +23,44 @@
 				background-color:#29292c !important;
 			}
 		</style>
+<script>
+ $(document).ready(function()
+ {
+   //Handles menu drop down`enter code here`
+   $('.dropdown-menu').find('form').click(function (e) {
+    e.stopPropagation();
+    });
+  });
+  </script>
 	</head>
-	<body>
+	<body style="background-color:#fff;">
 		<nav class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="#">BahasaKita</a>
 				</div>
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Kamus</a></li>
+					<li class="active"><a href="#">Beranda</a></li>
+					<li><a href="#">Tentang Kami</a></li>
 					<li><a href="#">Kursus</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"> Login</span></a></li>
+					<li class="dropdown" id="menuLogin"><a clas="dropdown-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"> Login</span></a>
+						<div class="dropdown-menu" style="padding:17px;">
+							<form role="form">
+								<div class="form-group">
+								<input class="form-control" name="username" id="username" placeholder="Username" type="text">
+								</div>
+								<div class="form-group">
+								<input class="from-control" name="password" id="password" placeholder="Password" type="password">
+								</div>
+								<div class="form-group">
+								<button type="submit" class="btn btn-default">Login</button>
+								</div>
+							</form>
+						</div>
+					
+					</li>
 				</ul>
 			</div>
 		</nav>
