reverse translating selesai tapi masih belum sempurna

--- a/translator.html
+++ b/translator.html
@@ -19,7 +19,7 @@
 					</ul>
 					<button class="btn btn-default" type="submit" onclick="reverseTranslate()">Terjemahkan</button>
 				</div>
-				<button class="col-sm-0 glyphicon glyphicon-retweet" onclick=""></button>
+				<button class="col-sm-0 glyphicon glyphicon-retweet" onclick="reverseTranslate()"></button>
 				<div class="col-sm-4 dropdown">
 				
 					<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Bahasa Jawa<span class="caret"></span></button>
