--- a/translator.html
+++ b/translator.html
@@ -17,7 +17,7 @@
 						<li class="active"><a href="#">Bahasa Indonesia</a></li>
 						<li><a href="#">Bahasa Jawa</a></li>
 					</ul>
-					<button class="btn btn-default" type="submit" onclick="reverseTranslate()">Terjemahkan</button>
+					<button class="btn btn-default" type="submit" onclick="translate(document.getElementsByTagName('textarea')[0].value)">Terjemahkan</button>
 				</div>
 				<button class="col-sm-0 glyphicon glyphicon-retweet" onclick="reverseTranslate()"></button>
 				<div class="col-sm-4 dropdown">
