--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<style>
+			body {
+				box-sizing:border-box;
+			}
+			.carousel {
+				width:100%;
+				margin:auto;
+			}
+			.container {
+				padding: 80px 120px;
+			}
 			.navbar {
 				background-color:red;
 				
@@ -22,11 +32,28 @@
 				color:white !important;
 				background-color:#29292c !important;
 			}
+			.person {
+				border:10px solid transparent;
+				margin-bottom:25px;
+				width:80%;
+				height:80%;
+				opacity:0.7;
+			}
+			.person:hover {
+				border-color:#f1f1f1;
+			}
+			div .container {
+				width:100%;
+			}
+			
+
+		
 		</style>
 
 	</head>
 	<body style="background-color:#fff;">
-		<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="row">
+		<nav class="col-sm-12 navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="#">BahasaKita</a>
@@ -56,6 +83,103 @@
 				</ul>
 			</div>
 		</nav>
+		</div>
+		<div class="row">
+		<div class="col-sm-12 container-fluid text-center">
+		<img src="img/BGhome.png" width="100%" height="500px">
+		</div>
+		</div>
+		<div class="container text-center">
+			<h3>Tentang Kita</h3>
+			<p>Ayo Belajar Bahasa Daerah dengan Bahasakita!</p>
+			<br>
+			<div class="row">
+			<div id="myCarousel" class="col-sm-12 carousel slide" data-ride="carousel">
+			<!--indicators -->
+			<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to"2"></li>
+			</ol>
+			<!-- wrapper for sludes -->
+			<div class="carousel-inner" role="listbox">
+			<div class="item active">
+			<div class="row">
+				<div class="col-sm-4">
+				<p><strong>Adho</strong></p><br>
+				<a href="#demo" data-toggle="collapse">
+				<img class="img-circle" src="img/adho.png"alt="Adho" width="200" height="300">
+				</a>
+				<div id="demo" class="collapse">
+				<p>Konseptor</p>
+				</div>
+				</div>
+				<div class="col-sm-4">
+				<p><strong>Nizar</strong></p><br>
+				<a href="#demo2" data-toggle="collapse">
+				<img class="img-circle" src="img/nizar.png" alt="Nizar" width="200" height="300">
+				</a>
+				<div id="demo2" class="collapse">
+				<p>Programmer</p>
+				</div>
+				</div>
+				<div class="col-sm-4">
+				<p><strong>Eka</strong></p><br>
+				<a href="#demo3" data-toggle="collapse">
+				<img class="img-circle" src="img/eka.png" alt="eka" width="200" height="300">
+				</a>
+				<div id="demo3" class="collapse">
+				<p>Konseptor</p>
+				</div>
+				</div>
+				</div>
+			</div>
+			<div class="item">
+			<div class="col-sm-4">
+				<p><strong>Adho</strong></p><br>
+				<a href="#demo" data-toggle="collapse">
+				<img class="img-circle" src="img/adho.png"alt="Adho" width="200" height="300">
+				</a>
+				<div id="demo" class="collapse">
+				<p>Konseptor</p>
+				</div>
+				</div>
+				<div class="col-sm-4">
+				<p><strong>Nizar</strong></p><br>
+				<a href="#demo2" data-toggle="collapse">
+				<img class="img-circle" src="img/nizar.png" alt="Nizar" width="200" height="300">
+				</a>
+				<div id="demo2" class="collapse">
+				<p>Programmer</p>
+				</div>
+				</div>
+				<div class="col-sm-4">
+				<p><strong>Eka</strong></p><br>
+				<a href="#demo3" data-toggle="collapse">
+				<img class="img-circle" src="img/eka.png" alt="eka" width="200" height="300">
+				</a>
+				<div id="demo3" class="collapse">
+				<p>Konseptor</p>
+				</div>
+				</div>
+				</div>
+				<!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+
+
+		</div>
 
 	
 	</body>
