--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 			body {
 				box-sizing:border-box;
 			}
-			.carousel {
-				width:100%;
-				margin:auto;
-			}
+			<!-- .#myCarousel.carousel.slide {width: 100%; max-width: 400px; !important} -->
 			.container {
-				padding: 80px 120px;
+				width:100%;
+				padding:0 0 0 0;
 			}
 			.navbar {
 				background-color:red;
+
 				
 			}
 			.navbar li a, .navbar .navbar-brand {
@@ -42,9 +41,7 @@
 			.person:hover {
 				border-color:#f1f1f1;
 			}
-			div .container {
-				width:100%;
-			}
+			
 			
 
 		
@@ -90,11 +87,12 @@
 		</div>
 		</div>
 		<div class="container text-center">
-			<h3>Tentang Kita</h3>
+			<h3>Tentang Kami</h3>
 			<p>Ayo Belajar Bahasa Daerah dengan Bahasakita!</p>
 			<br>
 			<div class="row">
-			<div id="myCarousel" class="col-sm-12 carousel slide" data-ride="carousel">
+			<div class="col-sm-12">
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!--indicators -->
 			<ol class="carousel-indicators">
 			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
