--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 				width:100%;
 				padding:0 0 0 0;
 			}
+			.carousel {
+				background:white;
+			}
 			.navbar {
 				background-color:red;
 
@@ -41,8 +44,9 @@
 			.person:hover {
 				border-color:#f1f1f1;
 			}
-			
-			
+			.right.carousel-control,.left.carousel-control {
+				background:none;
+			}
 
 		
 		</style>
@@ -86,7 +90,7 @@
 		<img src="img/BGhome.png" width="100%" height="500px">
 		</div>
 		</div>
-		<div class="container text-center">
+		<div class="container about-us text-center">
 			<h3>Tentang Kami</h3>
 			<p>Ayo Belajar Bahasa Daerah dengan Bahasakita!</p>
 			<br>
