--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 			body {
 				box-sizing:border-box;
 			}
-			<!-- .#myCarousel.carousel.slide {width: 100%; max-width: 400px; !important} -->
-			.container {
-				width:100%;
-				padding:0 0 0 0;
-			}
+		
+			
 			.container.about-us  {
 				width:100%;
 				padding:37px 0 37px 0;
+				background:red;
+				color:white;
 			}
 			.carousel {
-				background:white;
+				background:red;
 			}
 			.navbar {
 				background-color:red;
+				width:100%;
 
 				
 			}
@@ -54,8 +54,9 @@
 			}
 			.translator {
 				padding:32px 0px 47px 0px;
-				background:red;
+			
 			}
+			
 
 		
 		</style>
@@ -189,7 +190,7 @@
 			</div>
 			</div>
 			<div class="translator text-center">
-			<h3 style="color:white">Kamus</h3>
+			<h3>Kamus</h3>
 		
 			<div class="row">
 				<div class="col-sm-4 dropdown">
