--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 		<script type="text/javascript" src="translateController.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script>
+		$(document).ready(function(){
+  // Add smooth scrolling to all links in navbar + footer link
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+
+  // Make sure this.hash has a value before overriding default behavior
+  if (this.hash !== "") {
+
+    // Prevent default anchor click behavior
+    event.preventDefault();
+
+    // Store hash
+    var hash = this.hash;
+
+    // Using jQuery's animate() method to add smooth page scroll
+    // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+    $('html, body').animate({
+      scrollTop: $(hash).offset().top
+    }, 900, function(){
+
+      // Add hash (#) to URL when done scrolling (default click behavior)
+      window.location.hash = hash;
+      });
+    } // End if
+  });
+})
+		</script>
 		<style>
 			body {
 				box-sizing:border-box;
@@ -56,7 +83,7 @@
 				padding:32px 0px 47px 0px;
 			
 			}
-			
+
 
 		
 		</style>
@@ -70,9 +97,9 @@
 					<a class="navbar-brand" href="#">BahasaKita</a>
 				</div>
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Beranda</a></li>
-					<li><a href="#">Tentang Kami</a></li>
-					<li><a href="#">Kamus</a></li>
+					<li class="active"><a href="#home">Beranda</a></li>
+					<li><a href="#about-us">Tentang Kami</a></li>
+					<li><a href="#translator">Kamus</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown" id="menuLogin"><a clas="dropdown-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-log-in"> Login</span></a>
@@ -95,12 +122,12 @@
 			</div>
 		</nav>
 		</div>
-		<div class="row">
+		<div class="row" id="home">
 		<div class="col-sm-12 container-fluid text-center">
 		<img src="img/BGhome.png" width="100%" height="500px">
 		</div>
 		</div>
-		<div class="container about-us text-center">
+		<div class="container about-us text-center" id="about-us">
 			<h3>Tentang Kami</h3>
 			<p>Ayo Belajar Bahasa Daerah dengan Bahasakita!</p>
 			<br>
@@ -189,7 +216,7 @@
 			</div>
 			</div>
 			</div>
-			<div class="translator text-center">
+			<div class="translator text-center" id="translator">
 			<h3>Kamus</h3>
 		
 			<div class="row">
@@ -217,6 +244,10 @@
 			<textarea readonly class="col-sm-4" type="text" id="target" name="jw"></textarea>
 		</div>
 		</div>
+		<footer class="text-center">
+		<a class="up-arrow" href="">
+		</a>
+		</footer>
 
 	
 	</body>
