--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script>
 		$(document).ready(function(){
   // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+  $(".navbar a, footer a[href='#home']").on('click', function(event) {
 
   // Make sure this.hash has a value before overriding default behavior
   if (this.hash !== "") {
@@ -80,8 +80,20 @@
 				background:none;
 			}
 			.translator {
-				padding:32px 0px 47px 0px;
+				padding:97px 0px 97px 0px;
 			
+			}
+			footer {
+				background-color: red;
+				color: white;
+				padding: 32px;
+			}
+			footer a {
+				color: #f5f5f5;
+			}
+			footer a:hover {
+				color: #777;
+				text-decoration: none;
 			}
 
 
@@ -217,7 +229,7 @@
 			</div>
 			</div>
 			<div class="translator text-center" id="translator">
-			<h3>Kamus</h3>
+			<h3 style="padding-bottom:10px">Kamus</h3>
 		
 			<div class="row">
 				<div class="col-sm-4 dropdown">
@@ -245,8 +257,10 @@
 		</div>
 		</div>
 		<footer class="text-center">
-		<a class="up-arrow" href="">
-		</a>
+		<a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
+		<span class="glyphicon glyphicon-chevron-up"></span>
+		</a><br><br>
+		<p>Made By Kelompok H</p>
 		</footer>
 
 	
